frontend/src/index.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
}
@import url('https://fonts.googleapis.com/css?family=Bowlby+One+SC');
html{
    font-family: 'Bowlby One SC', cursive;
}

.bot{
    border-radius: 15px;
    padding-top:20px;
    padding-bottom: 20px;
    display: flex;
    flex-direction: row;
    column-gap: 10px;
    word-wrap: break-word;
    margin-top:10px;
    color:black;
    max-width:500px;
    /* background-image: linear-gradient(to right, #00b09b, #96c93d); */
    background-color:rgb(102, 255, 102);
    font-weight: 700;
    margin-bottom:10px;
    position:relative;
  transform:translateX(-60%) ;
  font-family: Orbitron, sans-serif;
}
.aabout{
    background-image: linear-gradient(to right, #8360c3, #2ebf91);
    padding-top:20px;
    padding-bottom:20px;
    min-height: 100vh;
    background-position: center;
    background-size: cover;
    background-repeat: repeat-y;
    color:white;
    font-family: 'Bowlby One SC', cursive;
    font-size:18px;
    display: flex;
    flex-direction: column;
    row-gap: 30px;
}
.ab-log{
    text-decoration: none;
    padding: 5px;
}
.ab-log:hover{
    background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
    border-radius: 5px;
}
.ab-main:hover{
    background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
    border-radius: 5px;
    
}
.ab-main{
    padding: 5px;
    text-decoration: none;
}
.buttons-cage{
    display: flex;
    flex-direction: row;
    column-gap: 20px;
    justify-content: space-between;
}
.about-head{
    color:white;
    padding: 6px;
}
.about-head:hover{
    background-image: linear-gradient(to right, #fc5c7d, #6a82fb);
    border-radius: 14px;
}
.choose h4{
    color:white;
}
.choose{
    background-color: black;
    max-width:400px;
    word-wrap: break-word;
    padding:20px;
    border: 3px solid transparent;
    border-radius: 20px;
    box-shadow: 2px 12px 2px 12px rgba(0, 0, 0, 0.168);
}
.choose:hover{
    border:3px solid white;
}
.para{
    color:linear-gradient(to right, #00b4db, #0083b0);
    font-size: 17px;
}
.about-head{
    color:black;
    font-size: 30px;
}
.bot img{
    float: left;
}
.user img{
    float:right;
}
::-webkit-scrollbar {
    width: 8px;
    background-image:#f7797d;
  }
  
  ::-webkit-scrollbar-track {
    background-image:#f7797d;
  }
  
  ::-webkit-scrollbar-thumb {
    box-shadow: inset 0 0 50px #f7797d;
  }
.image-icon{
    width:35;
    height:35px;
    border-radius: 50%;
}
.image-content{
  background-color: black;
}
.user{
    border-radius: 15px;
    padding-top:20px;
    padding-bottom: 20px;
    display: flex;
    column-gap: 10px;
    word-break: break-all;
    margin-top:10px;
    color:black;
    max-width:500px;
    /* background-image: linear-gradient(to right, #fc5c7d, #6a82fb); */
    background-color:rgb(0, 204, 255);
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    position: relative;
    margin-bottom:10px;
  transform:translateX(60%) ;
}
.hide{
    display:none;
}
.contents{
    display:flex;
    flex-direction: row;
    column-gap: 20px;
    font-size:20px;
    margin-left:5px;
    margin-right:5px;
    transform: translateY(30%);
}
.back{
    text-decoration: none;
    color:white;
}
.about{
    text-decoration:none;
    color:white;
}
.Navbar{
    height:50px;
    display: flex;
    justify-content: space-between;
    background-color:black;
    width:100%;
    position: relative;
    top:0;
}
.heading{
    font-size:22px;
    transform: translateY(30%);
    color:white;
}
.inp-msg{
    width:86%;
    height:35px;
    font-size: 18px;
    position:fixed;
    bottom:0;
    background-color:black;
    box-shadow: 5px 8px 20px white;
    color:white;
    border-radius:5px;
position:fixed;
bottom: 0;
margin-top: 10px;
}
#listen button {
  border-radius: 5px;
  box-shadow: 5px 8px 20px white;
  color: white;
  background-color: black;
  font-size: 18px;
  max-height: 35px;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 10px;
  padding: 10px;
}
/* #listen button{
  border-radius:5px;
  box-shadow: 5px 8px 20px white;
  right:0;
  color:white;
  background-color:black;
  bottom:0;
  font-size: 18px;
  max-height:35px;
  position:fixed;
} */
.form_and_type{
    padding-top:50px;
    padding-bottom:35px;
    min-height: 100vh;
    background-image:url("../public/Back_Img.jpg");
    background-position: center;
    background-size: cover;
    background-repeat: repeat-y;
    color:white;
    font-family: 'Bowlby One SC', cursive;
    font-size:18px;
}
.login_page{
    background-image: url("../public/login-back.jpg");
    height:100vh;
    background-position: center;
    background-size: cover;
    background-repeat: repeat-y;
}
.login_form{
    border-radius: 10px;
    margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
 background-color: black;
  display: flex;
  flex-direction: column;
  align-items: center;
  row-gap: 30px;
  padding-top: 40px;
  padding-bottom: 40px;
  padding-left: 5px;
  padding-right:5px;
}
.api_key{
    width:300px;
    height:50px;
    border-radius: 10px;
    border: 1px solid transparent;
    background-color: transparent;
    color:white;
    /* border:1px solid white; */
    font-family:  Montserrat, sans-serif;
    animation-name:sample;
    animation-duration: 3s;
    animation-delay: 0s;
    animation-iteration-count: infinite;
}
.w-data{
  color:black;
}
.login_form h4{
    border-bottom: 1px solid transparent;
    color:white;
    padding:4px;
}
.name{
    width:300px;
    width:300px;
    height:50px;
    border-radius: 10px;
    background-color: transparent;
    color:white;
    font-family:  Montserrat, sans-serif;
    border: 1px solid transparent;
    animation-name:sample;
    animation-duration: 3s;
    animation-delay: 0s;
    animation-iteration-count: infinite;
}
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    size: 20px;
  }
  ::-moz-placeholder { /* Firefox 19+ */
    size:20px
  }
  :-ms-input-placeholder { /* IE 10+ */
    size:20px
  }
  :-moz-placeholder { /* Firefox 18- */
    size:20px;
  }
.button{
    width:100px;
    height:40px;
    border-radius: 10px;
    background-color: transparent;
    color:white;
    border:1px solid white;
    font-family:  'Bowlby One SC', cursive;
}
.ani {
    height: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .noon{
    display:none;
  }
  #listen{
    display:flex;
    flex-wrap:wrap;
  } 

  /* #listen button{
    width:100px;
    height:100px;
  } */
  .wave {
    width: 5px;
    height: 100px;
    background: linear-gradient(45deg, cyan, #fff);
    margin: 10px;
    animation: wave 1s linear infinite;
    border-radius: 20px;
  }
  
  @keyframes wave {
    0% {
      transform: scale(0);
    }
    50% {
      transform: scale(1);
    }
    100% {
      transform: scale(0);
    }
  }
.button:hover{
    background-image: linear-gradient(to right, #f8869d, #8195fa);
    color:black;
    border:none;
}
.loading{
    color:black;
}
@media only screen and (max-width: 310px){
    .login_form{
        width:180px;
    }
    .api_key{
        width:150px;
    }
    .name{
        width:150px
    }
  }
@media only screen and (max-width: 400px){
    .bot{
        max-width:210px;
        transform: none;
        text-align: center;
    }
    .user{
        max-width:210px;
        transform: none;
        text-align: center;
    }
  }

  @media only screen and (min-width: 400px ) and (max-width:600px){
    .bot{
        transform: translateX(18%);
        max-width:300px;
    }
    .user{
        transform: translateX(-18%);
        max-width:300px;
    }
  }
  @media only screen and (min-width: 600px ) and (max-width:720px){
    .bot{
        transform: translateX(30%);
        max-width:350px;
    }
    .user{
        transform: translateX(-30%);
        max-width:350px;
    }
  }
  @media only screen and (min-width: 720px ) and (max-width:900px){
    .bot{
        transform: translateX(40%);
        max-width:400px;
    }
    .user{
        transform: translateX(-40%);
        max-width:400px;
    }
  }
  @media only screen and (min-width: 900px ) and (max-width:1100px){
    .bot{
        transform: translateX(50%);
        max-width:400px;
    }
    .user{
        transform: translateX(-50%);
        max-width:400px;
    }
  }
  @keyframes sample{
    0%{border-top:1px solid white;}
    35%{border-right:1px solid white;}
    65%{border-bottom:1px solid white;}
    95%{border-left:1px solid white;}
  }
  @keyframes s{
    from{box-shadow: none;}
    to{box-shadow:2px 2px 2px 2px rgba(255, 255, 255, 0.415);}
  }

